SOPR001: internal java web project for training purpose, with feedback review from le gigs